Update improvement and fix bugs
